--- a/ChapterThree.tex
+++ b/ChapterThree.tex
@@ -1,4 +1,4 @@
-\chapter{Design of the MagAO-X wavefront sensor}
+\chapter{Design of the MagAO-X Wavefront Sensor}\label{CH3}
 
 \section{Introduction to Optical Design}
 
