--- a/report.bib
+++ b/report.bib
@@ -146,22 +146,6 @@ abstract = {The integral representation of the Zernike radial functions is well 
   organization={International Society for Optics and Photonics}
 }
 
-@article{bailey2013hd,
-  title={HD 106906 b: A planetary-mass companion outside a massive debris disk},
-  author={Bailey, Vanessa and Meshkat, Tiffany and Reiter, Megan and Morzinski, Katie and Males, Jared and Su, Kate YL and Hinz, Philip M and Kenworthy, Matthew and Stark, Daniel and Mamajek, Eric and others},
-  journal={The Astrophysical Journal Letters},
-  volume={780},
-  number={1},
-  pages={L4},
-  year={2013},
-  publisher={IOP Publishing}
-}
-
-@book{seager2010exoplanets,
-  title={Exoplanets},
-  author={Seager, Sara},
-  year={2010}
-}
 
 nce 
 
@@ -186,26 +170,6 @@ nce
   publisher={Taylor \& Francis}
 }
 
-@article{guyon2005,
-  title={Limits of adaptive optics for high-contrast imaging},
-  author={Guyon, Olivier},
-  journal={The Astrophysical Journal},
-  volume={629},
-  number={1},
-  pages={592},
-  year={2005},
-  publisher={IOP Publishing}
-}
-
-@article{males2019gmagao,
-  title={GMagAO-X: extreme adaptive optics \& coronagraphy for GMT at first light},
-  author={Males, Jared and Close, Laird M and Guyon, Olivier and Sitarski, Breann and Bouchez, Antonin and Weinberger, Alycia and Fitzgerald, Michael P},
-  journal={BAAS},
-  volume={51},
-  number={7},
-  pages={236},
-  year={2019}
-}
 
 @UNPUBLISHED{pyramidfig,
     title={AO tutorial at CTIO},
@@ -298,50 +262,7 @@ archivePrefix = "arXiv",
   publisher = {IOP Publishing}
 }
 
-@article{el2101million,
-  title={A million binaries from Gaia {eDR3}: sample selection and validation of Gaia parallax uncertainties},
-  author={El-Badry, Kareem and Rix, Hans-Walter and Heintz, Tyler M},
-  journal={arXiv preprint arXiv:2101.05282}
-}
 
-@article{wenger2000simbad,
-  title={The {SIMBAD} astronomical database-The {CDS} reference database for astronomical objects},
-  author={Wenger, Marc and Ochsenbein, Fran{\c{c}}ois and Egret, Daniel and Dubois, Pascal and Bonnarel, Fran{\c{c}}ois and Borde, Suzanne and Genova, Fran{\c{c}}oise and Jasniewicz, G{\'e}rard and Lalo{\"e}, Suzanne and Lesteven, Soizick and others},
-  journal={Astronomy and Astrophysics Supplement Series},
-  volume={143},
-  number={1},
-  pages={9--22},
-  year={2000},
-  publisher={EDP Sciences}
-}
-
-@article{mayor1995jupiter,
-  title={A Jupiter-mass companion to a solar-type star},
-  author={Mayor, Michel and Queloz, Didier},
-  journal={Nature},
-  volume={378},
-  number={6555},
-  pages={355--359},
-  year={1995},
-  publisher={Nature Publishing Group}
-}
-
-@book{seager2010exoplanets,
-  title={Exoplanets},
-  author={Seager, Sara},
-  year={2010}
-}
-
-@article{bailey2013hd,
-  title={HD 106906 b: A planetary-mass companion outside a massive debris disk},
-  author={Bailey, Vanessa and Meshkat, Tiffany and Reiter, Megan and Morzinski, Katie and Males, Jared and Su, Kate YL and Hinz, Philip M and Kenworthy, Matthew and Stark, Daniel and Mamajek, Eric and others},
-  journal={The Astrophysical Journal Letters},
-  volume={780},
-  number={1},
-  pages={L4},
-  year={2013},
-  publisher={IOP Publishing}
-}
 
 @inproceedings{males2014direct,
   title={Direct imaging of exoplanets in the habitable zone with adaptive optics},
@@ -353,66 +274,7 @@ archivePrefix = "arXiv",
   organization={International Society for Optics and Photonics}
 }
 
-@article{guyon2005,
-  title={Limits of adaptive optics for high-contrast imaging},
-  author={Guyon, Olivier},
-  journal={The Astrophysical Journal},
-  volume={629},
-  number={1},
-  pages={592},
-  year={2005},
-  publisher={IOP Publishing}
-}
 
-@article{males2019gmagao,
-  title={{GMagAO-X}: extreme adaptive optics \& coronagraphy for GMT at first light},
-  author={Males, Jared and Close, Laird M and Guyon, Olivier and Sitarski, Breann and Bouchez, Antonin and Weinberger, Alycia and Fitzgerald, Michael P},
-  journal={BAAS},
-  volume={51},
-  number={7},
-  pages={236},
-  year={2019}
-}
-
-@article{weisstein2002zernike,
-  title={Zernike polynomial},
-  author={Weisstein, Eric W},
-  journal={https://mathworld. wolfram. com/},
-  year={2002},
-  publisher={Wolfram Research, Inc.}
-}
-
-@article{Hsieh:20,
-author = {Y. H. Hsieh and Y. T. Yu and Y. H. Lai and M. X. Hsieh and Y. F. Chen},
-journal = {Opt. Express},
-keywords = {Atmospheric turbulence; Discrete Fourier transforms; Fast Fourier transforms; Laser resonators; Pattern recognition; Zernike polynomials},
-number = {2},
-pages = {936--947},
-publisher = {OSA},
-title = {Integral-based parallel algorithm for the fast generation of the Zernike polynomials},
-volume = {28},
-month = {Jan},
-year = {2020},
-url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-28-2-936},
-doi = {10.1364/OE.380567},
-abstract = {The integral representation of the Zernike radial functions is well approximated by applying the Riemann sums with a surprisingly rapid convergence. The errors of the Riemann sums are found to averagely be not exceed 3 \&\#x00D7;10\&\#x2212;14, 3.3\&\#x00D7;10\&\#x2212;14, and 1.8\&\#x00D7;10\&\#x2212;13 for the radial order up to 30, 50, and 100, respectively. Moreover, a parallel algorithm based on the Riemann sums is proposed to directly generate a set of radial functions. With the aid of the graphics processing units (GPUs), the algorithm shows an acceleration ratio up to 200-fold over the traditional CPU computation. The fast generation for a set of Zernike radial polynomials is expected to be valuable in further applications, such as the aberration analysis and the pattern recognition.},
-}
-
-@inproceedings{masalehdan2010modeling,
-  title={Modeling of Zernike optical aberrations by {MTF} and {PSF}},
-  author={Masalehdan, Hossein and Lotfi, Erik and Lotfi, Afshin and Jamshidi-Ghaleh, Kazem},
-  booktitle={Biomedical Optics},
-  pages={JMA98},
-  year={2010},
-  organization={Optical Society of America}
-}
-
-@article{roddier1999adaptive,
-  title={Adaptive optics in astronomy},
-  author={Roddier, Fran{\c{c}}ois},
-  year={1999},
-  publisher={Cambridge university press}
-}
 
 @article{kane2018maximum,
   title={Maximum Angular Separation Epochs for Exoplanet Imaging Observations},
@@ -614,16 +476,6 @@ abstract = {The integral representation of the Zernike radial functions is well 
 }
 
 
-@UNPUBLISHED{pyramidfig,
-    author= {A. Tokovinin},
-    title={AO tutorial at CTIO},
-    institutions={CTIO}
-    year={2001}
-    month={May}
-    url={http://www.ctio.noao.edu/~atokovin/tutorial/intro.html}
-    type={website}
-}
-
 @book{goodman2005introduction,
   title={Introduction to Fourier optics},
   author={Goodman, Joseph W},
@@ -759,4 +611,125 @@ abstract = {The integral representation of the Zernike radial functions is well 
   pages={105106},
   year={2017},
   publisher={International Society for Optics and Photonics}
+}
+
+@article{akeson2013nasa,
+  title={The NASA exoplanet archive: data and tools for exoplanet research},
+  author={Akeson, RL and Chen, X and Ciardi, D and Crane, M and Good, J and Harbut, M and Jackson, E and Kane, SR and Laity, AC and Leifer, S and others},
+  journal={Publications of the Astronomical Society of the Pacific},
+  volume={125},
+  number={930},
+  pages={989},
+  year={2013},
+  publisher={IOP Publishing}
+}
+
+@article{morzinski2015magellan,
+  title={Magellan adaptive optics first-light observations of the exoplanet $\beta$ Pic b. II. 3--5 $\mu$m direct imaging with MagAO+ Clio, and the empirical bolometric luminosity of a self-luminous giant planet},
+  author={Morzinski, Katie M and Males, Jared R and Skemer, Andy J and Close, Laird M and Hinz, Phil M and Rodigas, TJ and Puglisi, Alfio and Esposito, Simone and Riccardi, Armando and Pinna, Enrico and others},
+  journal={The Astrophysical Journal},
+  volume={815},
+  number={2},
+  pages={108},
+  year={2015},
+  publisher={IOP Publishing}
+}
+
+
+@article{skemer2012first,
+  title={First light LBT AO images of HR 8799 bcde at 1.6 and 3.3 $\mu$m: New discrepancies between young planets and old brown dwarfs},
+  author={Skemer, Andrew J and Hinz, Philip M and Esposito, Simone and Burrows, Adam and Leisenring, Jarron and Skrutskie, Michael and Desidera, Silvano and Mesa, Dino and Arcidiacono, Carmelo and Mannucci, Filippo and others},
+  journal={The Astrophysical Journal},
+  volume={753},
+  number={1},
+  pages={14},
+  year={2012},
+  publisher={IOP Publishing}
+}
+
+@inproceedings{snik2012vector,
+  title={The vector-APP: a broadband apodizing phase plate that yields complementary PSFs},
+  author={Snik, Frans and Otten, Gilles and Kenworthy, Matthew and Miskiewicz, Matthew and Escuti, Michael and Packham, Christopher and Codona, Johanan},
+  booktitle={Modern Technologies in Space-and Ground-based Telescopes and Instrumentation II},
+  volume={8450},
+  pages={84500M},
+  year={2012},
+  organization={International Society for Optics and Photonics}
+}
+
+@article{rodigas2014morphology,
+  title={On the morphology and chemical composition of the hr 4796a debris disk},
+  author={Rodigas, Timothy J and Stark, Christopher C and Weinberger, Alycia and Debes, John H and Hinz, Philip M and Close, Laird and Chen, Christine and Smith, Paul S and Males, Jared R and Skemer, Andrew J and others},
+  journal={The Astrophysical Journal},
+  volume={798},
+  number={2},
+  pages={96},
+  year={2014},
+  publisher={IOP Publishing}
+}
+
+@article{imanishi2020subaru,
+  title={Subaru Infrared Adaptive Optics-assisted High-spatial-resolution Imaging Search for Luminous Dual Active Galactic Nuclei in Nearby Ultraluminous Infrared Galaxies},
+  author={Imanishi, Masatoshi and Kawamuro, Taiki and Kikuta, Satoshi and Nakano, Suzuka and Saito, Yuriko},
+  journal={The Astrophysical Journal},
+  volume={891},
+  number={2},
+  pages={140},
+  year={2020},
+  publisher={IOP Publishing}
+}
+
+@article{bowler2016imaging,
+  title={Imaging extrasolar giant planets},
+  author={Bowler, Brendan P},
+  journal={Publications of the Astronomical Society of the Pacific},
+  volume={128},
+  number={968},
+  pages={102001},
+  year={2016},
+  publisher={IOP Publishing}
+}
+
+@article{soummer2004apodized,
+  title={Apodized pupil Lyot coronagraphs for arbitrary telescope apertures},
+  author={Soummer, R{\'e}mi},
+  journal={The Astrophysical Journal Letters},
+  volume={618},
+  number={2},
+  pages={L161},
+  year={2004},
+  publisher={IOP Publishing}
+}
+
+@article{foo2005optical,
+  title={Optical vortex coronagraph},
+  author={Foo, Gregory and Palacios, David M and Swartzlander, Grover A},
+  journal={Optics letters},
+  volume={30},
+  number={24},
+  pages={3308--3310},
+  year={2005},
+  publisher={Optical Society of America}
+}
+
+@article{rampy2012production,
+  title={Production of phase screens for simulation of atmospheric turbulence},
+  author={Rampy, Rachel and Gavel, Don and Dillon, Daren and Thomas, Sandrine},
+  journal={Applied optics},
+  volume={51},
+  number={36},
+  pages={8769--8778},
+  year={2012},
+  publisher={Optical Society of America}
+}
+
+@article{sanders2013thirty,
+  title={The thirty meter telescope (tmt): An international observatory},
+  author={Sanders, Gary H},
+  journal={Journal of Astrophysics and Astronomy},
+  volume={34},
+  number={2},
+  pages={81--86},
+  year={2013},
+  publisher={Springer}
 }
