--- a/thesis.tex
+++ b/thesis.tex
@@ -66,17 +66,17 @@
 
 \begin{document}
 \maketitlepage
-{COLLEGE OF OPTICAL SCIENCES} % Title of your department.
+{WYANT COLLEGE OF OPTICAL SCIENCES} % Title of your department.
 {2020}	
 
 \approval
-{TB}		% Defense Date	
+{May 12$^{th}$,2021}		% Defense Date	
 {Jared Males}	% 1st committee member
 {Michael Hart}		% 2nd committee member
-{tbd}
-{tbd}
+{Olivier Guyon}
 
-\statementbyauthor
+
+% \statementbyauthor
 % If this is a Thesis, use the following form, with your thesis director's
 % name and title in the square brackets like so (you should also omit the 
 % approval form insertion above):
@@ -86,7 +86,7 @@
 \incacknowledgements{acknowledgements}
 
 % Include the ``Dedication''
-%\incdedication{dedication}
+\incdedication{dedication}
 
 % Create a ``Table of Contents''
 \tableofcontents
@@ -101,12 +101,12 @@
 \incabstract{abstract}
 
 \include{Introduction}
+\include{ChapterOne}
 \include{ChapterTwo}
 \include{ChapterThree}
 \include{ChapterFour}
-\include{ch5HotellingObserver}
-\include{ch6NullHypothesis}
-\include{ch7FutureWork}
+\include{ChapterFive}
+\include{ChapterSix}
 
 \renewcommand{\baselinestretch}{1}		% chaning the value
 \small\normalsize						% switch size to make the value take
